<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="MotorDegreeToCablePositionParam" Id="{b7098570-c3c4-4f01-bebf-1ca090bab7c7}">
    <Declaration><![CDATA[TYPE MotorDegreeToCablePositionParam :
STRUCT
	reset_cable_position : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>