<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="MotorParam" Id="{068494cb-179e-42a3-86c1-7fc83d8e0927}">
    <Declaration><![CDATA[TYPE MotorParam :
STRUCT
	// 发送给电机的速度
	target_axis_velocity_raw AT %Q* : DINT;
	
	// 期望的放绳速度
	target_cable_velocity : LREAL;
	
	// 最大最小速度(mm/s)
	max_cable_velocity : LREAL := 200;
	min_cable_velocity : LREAL := -200;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>