<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="SensorData" Id="{5ec53fb4-883a-493e-9705-7e4321ad90c3}">
    <Declaration><![CDATA[TYPE SensorData :
STRUCT
	force_value_raw AT %I* : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>