<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{b11a4dbc-82fe-42f0-8df7-b845aa9d250a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	axis1 : Tc2_MC2.AXIS_REF;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>